finished exercise 04     added extra classes to html file for easier css     added bottom margin to title     aligned everything to center     aligned text and img vertically     fixed width     added margins left and right

--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -6,12 +6,41 @@ img {
   width: 100px;
   height: 100px;
 }
-
+/* added bottom margin and alignment to center */
 .title {
   font-size: 36px;
   font-weight: 900;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 32px;
 }
+/*added flex wrap*/
+.text {
+  
+  display: flex;
+  flex-wrap: wrap;
+  flex: auto;
+  text-align: center;
+}
+/*created new class to align everything horizontally*/
+.allplants {
+  display: flex;
+  flex: 0 0 auto;
+  flex-direction: row;
+  justify-content: center;
+}
+/*created combination class to align text and pictures*/
+/* fixed width properties */
+.combo {
+  display: flex;
+  flex-direction: column;
+  flex: 0 0 auto;
+  align-items: center;
+  width: 200px;
+  margin-left: 52px;
+  margin-right: 52px;
 
+}
 /* do not edit this footer */
 .footer {
   position: fixed;
